INT-13176: Move browse all courses link over the courses to avoid the overlaping

--- a/scss/_personalmenu.scss
+++ b/scss/_personalmenu.scss
@@ -243,6 +243,9 @@ body.snap-pm-open {
 //  Personal menu current courses.
 // -------------------------
 #snap-pm-courses-current {
+    #snap-pm-courses-current-cards {
+        margin-top: 2em;
+    }
     // Hidden courses - always output for js, but hidden unless populated.
     #snap-pm-courses-hidden {
         display: none;
